--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <input type="text" data-bind="textInput: searchOption, valueUpdate: 'afterkeydown'" placeholder="Search">
 
       <div class="locations" data-bind="foreach: filteredLocations">
-        <p data-bind="text: title"></p>
+        <p data-bind="text: title, click: $parent.getInfo"></p>
       </div>
     </div>
 
