--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     <script src="js/locations.js"></script>
     <script src="js/app.js"></script>
     <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=&v=3&callback=startApp"></script>
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBOSlRsVnEzPxDg6V8peMv6hzr4-GOkqtY&v=3&callback=startApp"></script>
   </body>
 </html>
