--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Kirstenhof - Neighbourhood Map</title>
-    <link rel="stylesheet" type="text/css" href="css/app.css">
+    <link rel="stylesheet"  href="css/app.css">
   </head>
 
   <body>
